[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13" , features = ["derive"]}
rand = "0.8.5"
rust-crypto = "0.2.36"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.17"

# rename the binary output file.
[[bin]]
name = "criptografia"
path = "src/main.rs"